src/main/java/com/example/userbehaviormanagement/services/exceptions/errors/DuplicateResourceException.java
package com.example.userbehaviormanagement.services.exceptions.errors;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) {
        super(message);
    }
}
